# april-benchmarks

./: .gitignore  CMakeLists.txt  README.md  log.lammps
analysis/: april_argon_block_runs.csv  april_argon_block_summary.csv  april_vs_hardcoded_runs.csv  april_vs_hardcoded_summary.csv  lammps_argon_block_runs.csv  lammps_argon_block_summary.csv
analysis/april/: april_all_runs.csv  april_argon_scaling.csv  april_microbench.csv
analysis/lammps/: lammps_all_runs.csv  lammps_force_kernel.csv  lammps_scaling.csv
analysis/thesis/: april_abstraction_overhead.csv  april_force_kernel_focus.csv  april_simd_layout.csv  april_strong_scaling.csv  april_thesis_numbers.md  lammps_force_kernel_focus.csv  lammps_strong_scaling.csv  lammps_thesis_numbers.md  lammps_timing_breakdown.csv
april-bench/: argon_block.cpp
april_bench/: CMakeLists.txt  april_vs_hardcoded.cpp  argon_block.cpp  force_kernel_bench.cpp  utils.hpp
april_bench/results/argon/: argon_block.csv
bench_results/: lammps_results.csv
bench_results/argon_sweep/4/: argon_block.cpp  master_results.csv
bench_results/argon_sweep/5/: master_results.csv
bench_results/argon_sweep/6/: master_results.csv
bench_results/argon_sweep/aos_vs_soa_aosoa/: argon_block.cpp  master_results.csv
bench_results/argon_sweep/initial_sweep/: argon_block.cpp  info.txt  master_results.csv
bench_results/argon_sweep/native_threading/: master_results.csv
bench_results/argon_sweep/omp_threading/: argon_block.cpp  master_results.csv
engines/april/: CMakeLists.txt  build.sh  fetch_deps.sh  run.sh
engines/april/src/: april_vs_hardcoded.cpp  argon_block.cpp  blast_wave.cpp  force_kernel_bench.cpp  utils.hpp
engines/lammps/: argon_block.in  build.sh  build_lammps_intel.sh  build_lammps_kokkos.sh  clone_lammps.sh  fetch_deps.sh  force_kernel_bench.in  in.argon_block  make_argon_grid.py  make_force_kernel_bench_grid.py  run_argon.sh  run_force_kernel.sh  run_lammps.sh
figures/strong_scaling/: strong_scaling_mups_dt_0p005_10^{m7}_summary.csv
lammps_bench/: in.argon_block  log.lammps  run_lammps.sh
results/april/: argon_block_strong_scaling.csv  argon_block_weak_scaling.csv
results/april/native-autovec/april_vs_hardcoded/default/20260422_113533/: april_vs_hardcoded.json  run_info.txt
results/april/native-autovec/april_vs_hardcoded/default/20260422_115306/: april_vs_hardcoded.json  command.txt  run_info.txt
results/april/native-autovec/april_vs_hardcoded/default/20260422_121711/: april_vs_hardcoded.json  run_info.txt
results/april/native-autovec/argon_block/strong_n100_p1000000_rho0.8442_dt0.005_steps500_b2x2x2_C08_AoSoA_NativeSpinExecutor_hilbert_t1/20260422_132547/: command.txt  run_info.txt
results/april/native-autovec/argon_block/strong_n100_p1000000_rho0.8442_dt0.005_steps500_b2x2x2_C08_AoSoA_NativeSpinExecutor_hilbert_t11/20260422_132547/: command.txt  run_info.txt
results/april/native-autovec/argon_block/strong_n100_p1000000_rho0.8442_dt0.005_steps500_b2x2x2_C08_AoSoA_NativeSpinExecutor_hilbert_t16/20260422_132547/: command.txt  run_info.txt
results/april/native-autovec/argon_block/strong_n100_p1000000_rho0.8442_dt0.005_steps500_b2x2x2_C08_AoSoA_NativeSpinExecutor_hilbert_t2/20260422_132547/: command.txt  run_info.txt
results/april/native-autovec/argon_block/strong_n100_p1000000_rho0.8442_dt0.005_steps500_b2x2x2_C08_AoSoA_NativeSpinExecutor_hilbert_t23/20260422_132547/: command.txt  run_info.txt
results/april/native-autovec/argon_block/strong_n100_p1000000_rho0.8442_dt0.005_steps500_b2x2x2_C08_AoSoA_NativeSpinExecutor_hilbert_t3/20260422_132547/: command.txt  run_info.txt
results/april/native-autovec/argon_block/strong_n100_p1000000_rho0.8442_dt0.005_steps500_b2x2x2_C08_AoSoA_NativeSpinExecutor_hilbert_t32/20260422_132547/: command.txt  run_info.txt
results/april/native-autovec/argon_block/strong_n100_p1000000_rho0.8442_dt0.005_steps500_b2x2x2_C08_AoSoA_NativeSpinExecutor_hilbert_t4/20260422_132547/: command.txt  run_info.txt
results/april/native-autovec/argon_block/strong_n100_p1000000_rho0.8442_dt0.005_steps500_b2x2x2_C08_AoSoA_NativeSpinExecutor_hilbert_t45/20260422_132547/: command.txt  run_info.txt
results/april/native-autovec/argon_block/strong_n100_p1000000_rho0.8442_dt0.005_steps500_b2x2x2_C08_AoSoA_NativeSpinExecutor_hilbert_t56/20260422_132547/: command.txt  run_info.txt
results/april/native-autovec/argon_block/strong_n100_p1000000_rho0.8442_dt0.005_steps500_b2x2x2_C08_AoSoA_NativeSpinExecutor_hilbert_t6/20260422_132547/: command.txt  run_info.txt
results/april/native-autovec/argon_block/strong_n100_p1000000_rho0.8442_dt0.005_steps500_b2x2x2_C08_AoSoA_NativeSpinExecutor_hilbert_t8/20260422_132547/: command.txt  run_info.txt
results/april/native-autovec/argon_block/strong_n100_p1000000_rho0.8442_dt0.005_steps500_b2x2x2_C08_AoSoA_OmpExecutor_hilbert_t16/20260422_011120/: command.txt  run_info.txt
results/april/native-autovec/argon_block/strong_n100_p1000000_rho0.8442_dt0.005_steps500_b2x2x2_C08_AoSoA_OmpExecutor_hilbert_t32/20260422_011120/: command.txt  run_info.txt
results/april/native-autovec/argon_block/strong_n100_p1000000_rho0.8442_dt0.005_steps500_b2x2x2_C08_AoSoA_OmpExecutor_hilbert_t56/20260422_011120/: command.txt  run_info.txt
results/april/native-autovec/argon_block/strong_n100_p1000000_rho0.8442_dt0.005_steps500_b2x2x2_C08_SOA_OmpExecutor_hilbert_t16/20260422_011119/: command.txt  run_info.txt
results/argon_block/: argon_block_strong_scaling.csv  argon_block_weak_scaling.csv
scripts/: april_abstraction_overhead.py  build_april.sh  build_lammps_intel.sh  build_lammps_kokkos.sh  combined_strong_scaling.py  extract_april_results.py  extract_april_results_thesis.py  extract_lammps_results.py  extract_lammps_results_thesis.py  info  parse_april_results.py  parse_lammps_results.py  plot_results.py  plot_strong_scaling_combined.py  run_all_suites.sh  run_april_bench.sh  run_april_suite.sh  run_lammps_suite.sh  run_suite_lammps.sh  slurm_april_suite.sbatch  strong_scaling.py  suite.sbatch
(+4143 files in other folders)
